added test data to evaluation

--- a/fine_tuneing.ipynb
+++ b/fine_tuneing.ipynb
@@ -220,34 +220,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b613afaa-72c0-4ffb-aebf-dd6cbbd867c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e2f04798ef514f13a12b99cc2b3ccb1a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Filter:   0%|          | 0/319 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2492b426b54844d082a69364d7f6e1e1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Filter:   0%|          | 0/319 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "65b65c60d5684e0087df5de10b1eab50",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Filter:   0%|          | 0/319 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8caa7eb3db294dfdb4fb7ee9d387bed1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Filter:   0%|          | 0/319 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# balance the dataset and take just 4 classes\n",
     "from datasets import concatenate_datasets\n",
     "\n",
     "NUM_TRAINING_SAMPLES = 30\n",
-    "NUM_TESTING_SAMPLES = 7\n",
+    "NUM_VAL_SAMPLES = 7\n",
+    "NUM_TESTING_SAMPLES = 5\n",
     "\n",
     "# criminal-law \n",
     "label_6_train_data = dataset['train'].filter(lambda example: example[\"label\"] == 'criminal-law').select(range(NUM_TRAINING_SAMPLES))\n",
+    "label_6_val_data = dataset['validation'].filter(lambda example: example[\"label\"] == 'criminal-law').select(range(NUM_VAL_SAMPLES))\n",
     "label_6_test_data = dataset['test'].filter(lambda example: example[\"label\"] == 'criminal-law').select(range(NUM_TESTING_SAMPLES))\n",
     "# employment (7)\n",
     "label_7_train_data = dataset['train'].filter(lambda example: example[\"label\"] == 'employment').select(range(NUM_TRAINING_SAMPLES))\n",
+    "label_7_val_data = dataset['validation'].filter(lambda example: example[\"label\"] == 'employment').select(range(NUM_VAL_SAMPLES))\n",
     "label_7_test_data = dataset['test'].filter(lambda example: example[\"label\"] == 'employment').select(range(NUM_TESTING_SAMPLES))\n",
     "# tax-law (14)\n",
     "label_14_train_data = dataset['train'].filter(lambda example: example[\"label\"] == 'tax-law').select(range(NUM_TRAINING_SAMPLES))\n",
+    "label_14_val_data = dataset['validation'].filter(lambda example: example[\"label\"] == 'tax-law').select(range(NUM_VAL_SAMPLES))\n",
     "label_14_test_data = dataset['test'].filter(lambda example: example[\"label\"] == 'tax-law').select(range(NUM_TESTING_SAMPLES))\n",
     "# trademark (15)\n",
     "label_15_train_data = dataset['train'].filter(lambda example: example[\"label\"] == 'trademark').select(range(NUM_TRAINING_SAMPLES))\n",
+    "label_15_val_data = dataset['validation'].filter(lambda example: example[\"label\"] == 'trademark').select(range(NUM_VAL_SAMPLES))\n",
     "label_15_test_data = dataset['test'].filter(lambda example: example[\"label\"] == 'trademark').select(range(NUM_TESTING_SAMPLES))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "c877736b-2666-4306-ad0f-5880442ed6c4",
    "metadata": {},
    "outputs": [
@@ -260,7 +322,7 @@
        "})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,6 +330,31 @@
    "source": [
     "train_data = concatenate_datasets([label_6_train_data, label_7_train_data, label_14_train_data, label_15_train_data])\n",
     "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b7f2af0f-34f9-4d37-92a6-5016efe2676b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['text', 'label'],\n",
+       "    num_rows: 28\n",
+       "})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_data = concatenate_datasets([label_6_val_data, label_7_val_data, label_14_val_data, label_15_val_data])\n",
+    "val_data"
    ]
   },
   {
@@ -281,7 +368,7 @@
       "text/plain": [
        "Dataset({\n",
        "    features: ['text', 'label'],\n",
-       "    num_rows: 28\n",
+       "    num_rows: 20\n",
        "})"
       ]
      },
@@ -318,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 20,
    "id": "a30eee3c-b4ec-41df-9b0b-c3e0077f7513",
    "metadata": {
     "scrolled": true
@@ -328,10 +415,10 @@
      "data": {
       "text/plain": [
        "{'text': Value(dtype='string', id=None),\n",
-       " 'label': ClassLabel(names=['criminal-law', 'employment', 'tax-law', 'trademark'], id=None)}"
+       " 'label': Value(dtype='string', id=None)}"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "014cad7a-5248-4ee0-9cbc-577a680691c0",
    "metadata": {},
    "outputs": [],
@@ -356,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "52efe5e7-04ea-4b58-8066-b0102824b2f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8c6ffc86751473aa187bd457d289abc",
+       "model_id": "df99727ce629459089dca950d85add34",
        "version_major": 2,
        "version_minor": 0
       },
@@ -377,7 +464,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12b17b289b144b2c8b2b40b5f9404cd7",
+       "model_id": "d9ca29779bb74eb096741b2e674d7ad4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -387,16 +474,31 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a6ad4a938ef44b38aa8b78371f3b9b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Casting to class labels:   0%|          | 0/20 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "train_data = encode_labels(train_data)\n",
+    "val_data = encode_labels(val_data)\n",
     "test_data = encode_labels(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "ec9672d2-3292-4cc0-aa9d-f183693a77f5",
    "metadata": {},
    "outputs": [
@@ -407,7 +509,7 @@
        " 'label': ClassLabel(names=['criminal-law', 'employment', 'tax-law', 'trademark'], id=None)}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "cb214468-1c32-4112-b288-a7279945a3e7",
    "metadata": {},
    "outputs": [],
@@ -432,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "132542f7-816f-47c2-a9dd-8b81412d6ccf",
    "metadata": {},
    "outputs": [],
@@ -443,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "279bc938-77c1-4e3d-9c87-2a27ff293035",
    "metadata": {},
    "outputs": [],
@@ -453,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "1e3989a1-52ec-49e7-aa1c-672c1fe4fca8",
    "metadata": {},
    "outputs": [],
@@ -464,14 +566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "id": "e4201ea2-b318-4e20-97d1-8c662c96370b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da28c7eb609f470eae77298543b5477e",
+       "model_id": "f80dd987f31349128c736587c746aab2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -485,7 +587,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab7b30a81d2941a5be29b2b7584437df",
+       "model_id": "08aa1ad7eaf94348b5140687e58a0f41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -495,27 +597,43 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9f058edb85c34ddda25c2c60d27eda05",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/20 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "tokenized_train = train_data.map(tokenize_function, batched=True)\n",
+    "tokenized_val = val_data.map(tokenize_function, batched=True)\n",
     "tokenized_test = test_data.map(tokenize_function, batched=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "7387a4f9-a0e6-4ce7-9bbc-a08e9846f735",
    "metadata": {},
    "outputs": [],
    "source": [
     "tokenized_train = tokenized_train.remove_columns([\"text\"])\n",
+    "tokenized_val = tokenized_val.remove_columns([\"text\"])\n",
     "tokenized_test = tokenized_test.remove_columns([\"text\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "id": "b2ab0aca-e487-4c04-91a6-0c2827701380",
    "metadata": {},
    "outputs": [
@@ -528,7 +646,7 @@
        "})"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 39,
    "id": "96cf4c92-27bc-4ae8-a8b1-4f12ed42ce72",
    "metadata": {},
    "outputs": [],
@@ -557,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "85621a17-0495-45c4-abaa-4add6fddc481",
    "metadata": {},
    "outputs": [
@@ -576,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "id": "14af36c1-1334-4788-bb71-8fa4be930502",
    "metadata": {},
    "outputs": [],
@@ -586,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "4f9a5095-0f33-48d3-9446-a50f691bfc34",
    "metadata": {},
    "outputs": [],
@@ -596,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "id": "a6fe87eb-8a0b-45eb-b327-34ce84b1cbcc",
    "metadata": {},
    "outputs": [],
@@ -607,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "id": "33ebc6b3-cd77-4d47-9551-8d4ef2fece1e",
    "metadata": {},
    "outputs": [],
@@ -617,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "id": "b72774f9-0c37-44b5-a3eb-c28a8db1e44b",
    "metadata": {},
    "outputs": [],
@@ -630,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "id": "d12d4b04-1aec-493f-bdbd-e7e5628e9251",
    "metadata": {},
    "outputs": [],
@@ -640,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "id": "9cf083cb-e884-487a-aeb9-2fd1daac57e0",
    "metadata": {},
    "outputs": [],
@@ -649,14 +767,14 @@
     "    model=model,\n",
     "    args=training_args,\n",
     "    train_dataset=tokenized_train,\n",
-    "    eval_dataset=tokenized_test,\n",
+    "    eval_dataset=tokenized_val,\n",
     "    compute_metrics=compute_metrics,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "id": "4f363132-a392-47af-b5a5-37105c87940d",
    "metadata": {},
    "outputs": [
@@ -667,7 +785,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='45' max='45' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [45/45 07:40, Epoch 3/3]\n",
+       "      [45/45 08:11, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -682,20 +800,20 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>No log</td>\n",
-       "      <td>1.125692</td>\n",
+       "      <td>1.140705</td>\n",
        "      <td>0.750000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.635660</td>\n",
+       "      <td>0.634312</td>\n",
        "      <td>0.928571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.466047</td>\n",
-       "      <td>0.964286</td>\n",
+       "      <td>0.461649</td>\n",
+       "      <td>0.892857</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -710,10 +828,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=45, training_loss=0.891310797797309, metrics={'train_runtime': 470.6212, 'train_samples_per_second': 0.765, 'train_steps_per_second': 0.096, 'total_flos': 47689964421120.0, 'train_loss': 0.891310797797309, 'epoch': 3.0})"
+       "TrainOutput(global_step=45, training_loss=0.8562598334418403, metrics={'train_runtime': 515.0012, 'train_samples_per_second': 0.699, 'train_steps_per_second': 0.087, 'total_flos': 47689964421120.0, 'train_loss': 0.8562598334418403, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,46 +850,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "id": "06ba6711-802f-44d1-a402-3ac9771b619c",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='4' max='4' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [4/4 00:06]\n",
-       "    </div>\n",
-       "    "
-      ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'eval_loss': 0.4660474359989166,\n",
-       " 'eval_accuracy': 0.9642857142857143,\n",
-       " 'eval_runtime': 9.7667,\n",
-       " 'eval_samples_per_second': 2.867,\n",
-       " 'eval_steps_per_second': 0.41,\n",
+       "{'eval_loss': 0.4440459609031677,\n",
+       " 'eval_accuracy': 0.95,\n",
+       " 'eval_runtime': 6.4454,\n",
+       " 'eval_samples_per_second': 3.103,\n",
+       " 'eval_steps_per_second': 0.465,\n",
        " 'epoch': 3.0}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainer.evaluate()"
+    "trainer.evaluate(tokenized_test)"
    ]
   },
   {
@@ -870,7 +970,7 @@
     "    model_init=model_init,\n",
     "    args=tuning_training_args,\n",
     "    train_dataset=tokenized_train,\n",
-    "    eval_dataset=tokenized_test,\n",
+    "    eval_dataset=tokenized_val,\n",
     "    processing_class=tokenizer,\n",
     "    compute_metrics=compute_metrics\n",
     ")"
@@ -1274,8 +1374,8 @@
    "outputs": [],
    "source": [
     "import random \n",
-    "random_sample = random.randint(0, 50)\n",
-    "sample = dataset['validation'].filter(lambda example: example[\"label\"] in labels)[random_sample]\n",
+    "random_sample = random.randint(0, 20)\n",
+    "sample = test_data[random_sample]\n",
     "sample_text = sample['text']\n",
     "sample_label = sample['label']"
    ]
