--- a/pytorch and tensorflow.ipynb
+++ b/pytorch and tensorflow.ipynb
@@ -454,21 +454,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lnewb\\anaconda3\\envs\\huggingface_course_env\\Lib\\site-packages\\transformers\\training_args.py:1575: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='45' max='216' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 45/216 01:34 < 06:16, 0.45 it/s, Epoch 0.41/2]\n",
+       "      <progress value='3' max='54' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 3/54 00:06 < 05:44, 0.15 it/s, Epoch 0.07/2]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -497,10 +489,10 @@
     "#PyTorch\n",
     "training_args = TrainingArguments(\n",
     "    output_dir=\"./pt_model\",\n",
-    "    evaluation_strategy=\"epoch\",\n",
+    "    eval_strategy=\"epoch\",\n",
     "    learning_rate=2e-5,\n",
-    "    per_device_train_batch_size=8,\n",
-    "    per_device_eval_batch_size=8,\n",
+    "    per_device_train_batch_size=32,\n",
+    "    per_device_eval_batch_size=32,\n",
     "    num_train_epochs=2,\n",
     "    weight_decay=0.01,\n",
     ")\n",
@@ -547,7 +539,7 @@
     "                 loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "                 metrics=['accuracy'])\n",
     "\n",
-    "model_tf.fit(tokenized_tf_1['train'], epochs=1)"
+    "model_tf.fit(tokenized_tf_1['train'], epochs=2)"
    ]
   }
  ],
