--- a/pytorch and tensorflow.ipynb
+++ b/pytorch and tensorflow.ipynb
@@ -1,23 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "8a06aa7b",
+   "cell_type": "markdown",
+   "id": "5e5d6193-3416-4ae8-b488-d052266bea79",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# https://www.kdnuggets.com/using-hugging-face-transformers-with-pytorch-and-tensorflow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "562753e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loading dataset"
+    "## Load dataset"
    ]
   },
   {
@@ -37,9 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dataset = load_dataset(\"asuender/motivational-quotes\", \"quotes\", split=\"train\")\n",
-    "dataset = load_dataset(\"SetFit/bbc-news\", split = \"train\")\n",
-    "#dataset = load_dataset(\"imdb\", split=\"train\")"
+    "dataset = load_dataset(\"SetFit/bbc-news\", split = \"train\")"
    ]
   },
   {
@@ -86,17 +72,31 @@
     }
    ],
    "source": [
-    "dataset.format"
+    "dataset.format # note type = None"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b5fc1aed",
+   "cell_type": "markdown",
+   "id": "7b6f8fb1-7ff1-4dfe-bfad-dd48d14c953a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# option 1: set the format of columns using with_format(), create PyTorch tensors by setting type=\"torch\""
+    "## Convert dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a9fd3b7-acf3-40d2-b337-0c41549813e0",
+   "metadata": {},
+   "source": [
+    "### Option 1: format using with_format()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89ce0881-97ee-4fd2-9c8b-c6670c1cee6f",
+   "metadata": {},
+   "source": [
+    "**Pytorch**"
    ]
   },
   {
@@ -106,31 +106,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "py_1 = dataset.with_format(type=\"torch\")"
+    "pt_format = dataset.with_format(type=\"torch\")\n",
+    "pt_format.format # note note type = Torch"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e3d5231e",
+   "cell_type": "markdown",
+   "id": "0955fd43-9b51-4a6d-be34-62e0249bdd4d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'type': 'torch',\n",
-       " 'format_kwargs': {},\n",
-       " 'columns': ['text', 'label', 'label_text'],\n",
-       " 'output_all_columns': False}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "py_1.format"
+    "**Tensorflow**"
    ]
   },
   {
@@ -140,41 +125,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf_1 = dataset.with_format(type=\"tf\")"
+    "tf_format = dataset.with_format(type=\"tf\")\n",
+    "tf_format.format # note note type = tensorflow"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a8cae3ba",
+   "cell_type": "markdown",
+   "id": "d77bf23f-5c45-4a39-bb59-7f536cce9ef8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'type': 'tensorflow',\n",
-       " 'format_kwargs': {},\n",
-       " 'columns': ['text', 'label', 'label_text'],\n",
-       " 'output_all_columns': False}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "tf_1.format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "30a8c737",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# we can also set our tokenizer options"
+    "### Option 2: set our tokenizer to return the desired format"
    ]
   },
   {
@@ -185,8 +145,15 @@
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer\n",
-    "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd1711d6-6ff4-4db7-bc17-1916b097cc83",
+   "metadata": {},
+   "source": [
+    "**Pytorch**"
    ]
   },
   {
@@ -214,6 +181,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e145ce5-4ac2-4dbd-baf0-c5336c5c8c5b",
+   "metadata": {},
+   "source": [
+    "**Tensorflow**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "c63c1fbf",
@@ -237,13 +212,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "e8bcc34c",
+   "cell_type": "markdown",
+   "id": "d5c6a590-1e8e-4e94-afed-14750c9002d8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# or apply transformations after tokenization"
+    "### Option 3: apply transformations after tokenization"
    ]
   },
   {
@@ -268,11 +241,20 @@
     }
    ],
    "source": [
+    "# tokenize our dataset\n",
     "def tokenize_function(examples):\n",
-    "    return tokenizer(examples['text'], max_length=50, padding='max_length', truncation=True)\n",
+    "    return tokenizer(examples['text'], padding='max_length', truncation=True)\n",
     "\n",
     "tokenized = dataset.map(tokenize_function, batched=True)\n",
     "tokenized = tokenized.remove_columns(['text', 'label_text'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "091eca24-d156-4ea0-b1c7-32fbaca5ec5a",
+   "metadata": {},
+   "source": [
+    "**Pytorch**"
    ]
   },
   {
@@ -282,7 +264,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_py_1 = tokenized.with_format(type='torch', columns=['input_ids', 'token_type_ids', 'attention_mask', 'label'])"
+    "tokenized_pt = tokenized.with_format(type='torch', columns=['input_ids', 'token_type_ids', 'attention_mask', 'label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "aa4d0183",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenized_pt = tokenized_pt.train_test_split(test_size=0.3)"
    ]
   },
   {
@@ -316,44 +308,63 @@
     }
    ],
    "source": [
-    "tokenized_py_1[0]"
+    "tokenized_pt['train'][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abac9b20-9973-4861-bde8-9f816460e8eb",
+   "metadata": {},
+   "source": [
+    "**Tensorflow**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "aa4d0183",
+   "execution_count": null,
+   "id": "116df33b-1065-4edc-b0ab-1351e64766ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_py_1 = tokenized_py_1.train_test_split(test_size=0.3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "9e47bbb8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# now with tensorflow\n",
     "# pip install --no-deps tensorflow (running without no deps broke numpy)\n",
     "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "00b3bdd7",
+   "execution_count": 131,
+   "id": "9e47bbb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_tf_1 = tokenized.with_format(type='tf', columns=['input_ids', 'token_type_ids', 'attention_mask', 'label'])"
+    "tokenized_tf = tokenized.with_format(type='tf', columns=['input_ids', 'token_type_ids', 'attention_mask', 'label'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 118,
+   "id": "705ddc5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'_PrefetchDataset' object has no attribute 'train_test_split'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[118], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tokenized_tf \u001b[38;5;241m=\u001b[39m \u001b[43mtokenized_tf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain_test_split\u001b[49m(test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.3\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: '_PrefetchDataset' object has no attribute 'train_test_split'"
+     ]
+    }
+   ],
+   "source": [
+    "tokenized_tf = tokenized_tf.train_test_split(test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "id": "c5398447",
    "metadata": {
     "scrolled": true
@@ -380,23 +391,39 @@
        "        1, 1, 1, 1, 1, 1], dtype=int64)>}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokenized_tf_1[0]"
+    "tokenized_tf['train'][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a50afd10-6ee2-4f3f-9138-17275fac34bd",
+   "metadata": {},
+   "source": [
+    "## Load model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "705ddc5e",
+   "execution_count": null,
+   "id": "f8a9809d-a57d-4cd0-864c-79cf16a31fd8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_tf_1 = tokenized_tf_1.train_test_split(test_size=0.3)"
+    "# pip install tf-keras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23f0ce29-1877-4765-81cc-51adeb2fe983",
+   "metadata": {},
+   "source": [
+    "**Pytorch**"
    ]
   },
   {
@@ -435,21 +462,58 @@
     }
    ],
    "source": [
-    "# loading model\n",
-    "# pip install tf-keras\n",
-    "\n",
-    "#pytorch\n",
     "from transformers import AutoModelForSequenceClassification\n",
-    "model_pt = AutoModelForSequenceClassification.from_pretrained(\"bert-base-uncased\", num_labels=5, torch_dtype=\"auto\")\n",
-    "\n",
-    "#tensorflow\n",
-    "from transformers import TFAutoModelForSequenceClassification\n",
-    "model_tf = TFAutoModelForSequenceClassification.from_pretrained(\"bert-base-uncased\", num_labels=5)"
+    "model_pt = AutoModelForSequenceClassification.from_pretrained(\"bert-base-uncased\", num_labels=5, torch_dtype=\"auto\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e894d61b-3f1e-44b1-a0e5-5c58ebfae4ec",
+   "metadata": {},
+   "source": [
+    "**Tensorflow**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c704c2be-42ef-4be2-8fb4-4e02532b4a8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import TFAutoModelForSequenceClassification\n",
+    "model_tf = TFAutoModelForSequenceClassification.from_pretrained(\"bert-base-uncased\", num_labels=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "687f7e83-e252-457d-a047-f568a34350ea",
+   "metadata": {},
+   "source": [
+    "## Train model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de01a08a-eb3b-41b7-bdda-693aadf2e24f",
+   "metadata": {},
+   "source": [
+    "**Pytorch**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "468081ee-0e50-4e6e-885b-188a1ae13fee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import TrainingArguments, Trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "e7566dbe",
    "metadata": {},
    "outputs": [
@@ -459,8 +523,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='3' max='54' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 3/54 00:06 < 05:44, 0.15 it/s, Epoch 0.07/2]\n",
+       "      <progress value='54' max='54' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [54/54 07:08, Epoch 2/2]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -471,6 +535,16 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.103610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.110506</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -480,66 +554,97 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=54, training_loss=0.05103096255549678, metrics={'train_runtime': 435.7465, 'train_samples_per_second': 3.933, 'train_steps_per_second': 0.124, 'total_flos': 44041454705400.0, 'train_loss': 0.05103096255549678, 'epoch': 2.0})"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from transformers import TrainingArguments, Trainer\n",
-    "# pytorch model\n",
-    "# we can use the trainer for high level cutsomization \n",
-    "#PyTorch\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir=\"./pt_model\",\n",
+    "    output_dir=\"pt_model\",\n",
     "    eval_strategy=\"epoch\",\n",
     "    learning_rate=2e-5,\n",
-    "    per_device_train_batch_size=32,\n",
-    "    per_device_eval_batch_size=32,\n",
     "    num_train_epochs=2,\n",
-    "    weight_decay=0.01,\n",
+    "    weight_decay=0.01\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
     "    model=model_pt,\n",
     "    args=training_args,\n",
-    "    train_dataset=tokenized_py_1['train'],\n",
-    "    eval_dataset=tokenized_py_1['test'],\n",
+    "    train_dataset=tokenized_py['train'],\n",
+    "    eval_dataset=tokenized_py['test']\n",
     ")\n",
     "\n",
     "trainer.train()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df34de2d",
+   "cell_type": "markdown",
+   "id": "4d772679-898c-4bd7-833e-de836903118e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Tensorflow**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 95,
+   "id": "01643e7f-1686-4fdd-9d84-03e8e78ee485",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenized_tf = tokenized_tf['train'].to_tf_dataset(\n",
+    "    columns=['input_ids', 'attention_mask'],\n",
+    "    label_cols=[\"label\"],\n",
+    "    shuffle=True,\n",
+    "    batch_size=16\n",
+    ") # you could also run this directly on tokenized without doing the other steps above in option 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "id": "6dd741f8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "dictionary update sequence element #0 has length 3; 2 is required",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[33], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#TensorFlow\u001b[39;00m\n\u001b[0;32m      2\u001b[0m model_tf\u001b[38;5;241m.\u001b[39mcompile(optimizer\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39moptimizers\u001b[38;5;241m.\u001b[39mAdam(learning_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2e-5\u001b[39m),\n\u001b[0;32m      3\u001b[0m                  loss\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mlosses\u001b[38;5;241m.\u001b[39mSparseCategoricalCrossentropy(from_logits\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m),\n\u001b[0;32m      4\u001b[0m                  metrics\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m----> 6\u001b[0m model_tf\u001b[38;5;241m.\u001b[39mfit(\u001b[38;5;28;43mdict\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtokenized_tf_1\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtrain\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m, epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: dictionary update sequence element #0 has length 3; 2 is required"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "WARNING:tensorflow:From C:\\Users\\lnewb\\anaconda3\\envs\\huggingface_course_env\\Lib\\site-packages\\tf_keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\lnewb\\anaconda3\\envs\\huggingface_course_env\\Lib\\site-packages\\tf_keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "54/54 [==============================] - 172s 3s/step - loss: 1.0367 - accuracy: 0.7305\n",
+      "Epoch 2/2\n",
+      "54/54 [==============================] - 150s 3s/step - loss: 0.2418 - accuracy: 0.9708\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tf_keras.src.callbacks.History at 0x1c2a23e6ed0>"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#TensorFlow\n",
     "model_tf.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=2e-5),\n",
     "                 loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "                 metrics=['accuracy'])\n",
     "\n",
-    "model_tf.fit(tokenized_tf_1['train'], epochs=2)"
+    "model_tf.fit(tokenized_tf, epochs=2)"
    ]
   }
  ],
